# Engine

./: CMakeLists.txt
resources/shaders/: .fshader.glsl.un~  .vshader.glsl.un~  BaseFragmentShader.glsl  BaseVertexShader.glsl
src/: CMakeLists.txt  main.cpp
src/camera/: camera.cpp  camera.h
src/docks/: filedock.cpp  filedock.h
src/engines/: engine.cpp  engine.h  mainengine.cpp  mainengine.h  modeldisplayengine.cpp  modeldisplayengine.h
src/menubar/: menubar.cpp  menubar.h
src/mesh/: mesh.cpp  mesh.h
src/model/: model.cpp  model.h
src/object/: object.cpp  object.h
src/shaderprograms/: baseshaderprogram.cpp  baseshaderprogram.h  shaderprogram.cpp  shaderprogram.h
src/shaders/: shader.cpp  shader.h
src/structures/: meshdata.h  vertexdescriptor.h
src/texture/: texture.cpp  texture.h
src/windows/mainwindow/: mainwindow.cpp  mainwindow.h
src/windows/openglwindow/: mainopenglwindow.cpp  mainopenglwindow.h  modeldisplaywidget.cpp  modeldisplaywidget.h  openglwindow.cpp  openglwindow.h
